[gd_scene load_steps=10 format=2]

[ext_resource path="res://PeaberryBase.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Options_menu.gd" type="Script" id=3]
[ext_resource path="res://menu_maze.gd" type="Script" id=4]
[ext_resource path="res://World/images/GrassBackground.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[node name="Options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -88, -64 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 1400 )

[node name="MazeGenerator" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="YSort" type="YSort" parent="MazeGenerator"]

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 34.4
anchor_bottom = 18.4
margin_left = -5.0
margin_top = -5.0
margin_right = -43818.8
margin_bottom = -12803.4
color = Color( 0, 0, 0, 0.796078 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 73.0
margin_top = 147.0
margin_right = 363.0
margin_bottom = 706.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 290.0
margin_bottom = 559.0

[node name="menu_button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Menu"
flat = true
align = 0

[node name="world_settimgs_button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 290.0
margin_bottom = 56.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "World Settings"
flat = true
align = 0

[node name="fog_of_war" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 290.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
keep_pressed_outside = true
text = "Fog of war"

[node name="nuke_mode" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 290.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
text = "Nuke mode"

[node name="music_label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 290.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 2 )
text = "
Music Volume"

[node name="music_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 290.0
margin_bottom = 211.0
min_value = -50.0
max_value = 50.0

[node name="sound_effects_label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 290.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 2 )
text = "Sound effects Volume"

[node name="sound_effects_slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 239.0
margin_right = 290.0
margin_bottom = 255.0
min_value = -50.0
max_value = 50.0

[node name="World_settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="BlackOverlay2" type="ColorRect" parent="World_settings"]
margin_left = -2.0
margin_top = -3.0
margin_right = 1319.0
margin_bottom = 738.0
color = Color( 0, 0, 0, 0.929412 )

[node name="MarginContainer2" type="MarginContainer" parent="World_settings"]
margin_left = 73.0
margin_top = 147.0
margin_right = 491.0
margin_bottom = 706.0

[node name="VBoxContainer" type="VBoxContainer" parent="World_settings/MarginContainer2"]
margin_right = 418.0
margin_bottom = 559.0

[node name="back_button" type="Button" parent="World_settings/MarginContainer2/VBoxContainer"]
margin_right = 418.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
flat = true
align = 0

[node name="explosion_time_random" type="CheckButton" parent="World_settings/MarginContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 418.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )
text = "Random time before explosion"

[node name="explosion_damage_random" type="CheckButton" parent="World_settings/MarginContainer2/VBoxContainer"]
margin_top = 74.0
margin_right = 418.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
text = "Random explosion damage"

[connection signal="pressed" from="MarginContainer/VBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/world_settimgs_button" to="." method="_on_world_settimgs_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/fog_of_war" to="." method="_on_fog_of_war_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/nuke_mode" to="." method="_on_nuke_mode_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/sound_effects_slider" to="." method="_on_sound_effects_slider_value_changed"]
[connection signal="pressed" from="World_settings/MarginContainer2/VBoxContainer/back_button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="World_settings/MarginContainer2/VBoxContainer/explosion_time_random" to="." method="_on_explosion_time_random_toggled"]
[connection signal="toggled" from="World_settings/MarginContainer2/VBoxContainer/explosion_damage_random" to="." method="_on_explosion_damage_random_toggled"]
